--- a/layout_stylesheet.css
+++ b/layout_stylesheet.css
@@ -9,26 +9,33 @@ body {
 }
 
 /* Styling Flexbox */
-#flexbox-demo-bg {
-    background-color: purple;
+ {
+    background-color: green;
     color: white;
 }
 
 .flex-container {
-    display: inline-flex;
-    flex-wrap: nowrap;
-    background-color: indianred;
-    justify-content: center;
+    display: flex;
+    flex-wrap: row wrap;
+    background-color: lightgray;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+   list-style: none;
+
    
 }
 
 .flex-item{
-    background-color: indianred;
+    background-color: rgb(188, 173, 241);
+    padding: 5px;
     width: 300px;
+    height: auto;
     margin: 10px;
     text-align: center;
-    line-height: 20px;
-    font-size: 20px;
+    line-height: 30px;
+    font-size: 30px;
+    
 }
 
 img {
