--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -2,3 +2,8 @@
     font-family: Arial, Helvetica, sans-serif, italic;
     color: darkblue
     }
+    p {
+        font-family: Arial, Helvetica, sans-serif, italic;
+        color: red;
+        
+      }
