--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,9 +1,11 @@
 .greentext {
     font-family: Arial, Helvetica, sans-serif, italic;
     color: darkblue
-    }
-    p {
-        font-family: Arial, Helvetica, sans-serif, italic;
-        color: red;
-        
-      }
+    
+}
+#second-paragraph {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color: darkblue;
+    
+}
